@startuml
'stateless namespace EtAlii.BinanceMagic.Surfing
'stateless class SurfingStateMachineBase

title Automatic trading mechanism B: Coin surfin'.

[*] --> Start
Start --> GetTrends : Continue
Start : OnEntry:
Start : - Load from disk.

state DetermineOtherCoinValue <<choice>>
GetTrends -down-> DetermineOtherCoinValue : Continue
note left of DetermineOtherCoinValue
Calculation of worth is done 
by comparing the current coin's 
trend (candlesticks direction)
with that of the other coin.
If the stakes for the other coin 
are better we are better of switching.
end note

DetermineOtherCoinValue --> Wait : CurrentCoinHasBestTrend
DetermineOtherCoinValue --> TransferToOtherCoin : OtherCoinHasBetterTrend
DetermineOtherCoinValue --> TransferToUsdt : AllCoinsHaveDownwardTrends
note left of TransferToUsdt
In case all coins signal a 
downwards trend there is 
no good choice beyond getting as
 close to 'payout money' as possible
end note
state TransferToUsdt {
    state "SellCurrentCoin" as SellCurrentCoinInUsdtTransfer
    state "WaitUntilCoinSold" as WaitUntilCoinSoldInUsdtTransfer
    [*] --> SellCurrentCoinInUsdtTransfer
    SellCurrentCoinInUsdtTransfer --> WaitUntilCoinSoldInUsdtTransfer : Continue
    WaitUntilCoinSoldInUsdtTransfer --> [*] : Continue
}
TransferToUsdt -down-> Wait

note right of TransferToOtherCoin
If another coin has better future predictions 
it could be wise to transfer the whole
value of the current coin onto the next one.   
end note
state TransferToOtherCoin {
    state DetermineSymbolPair <<choice>>
    state "WaitUntilCoinSold" as WaitUntilCoinSoldAsSymbolPair
    [*] --> DetermineSymbolPair
    DetermineSymbolPair --> SellCurrentCoin : IsNoSymbolPair
    DetermineSymbolPair --> SellAsSymbolPair : IsSymbolPair
    SellAsSymbolPair --> WaitUntilCoinSoldAsSymbolPair : Continue
    WaitUntilCoinSoldAsSymbolPair --> [*] : Continue
    SellCurrentCoin --> WaitUntilCoinSold : Continue
    WaitUntilCoinSold --> BuyOtherCoin : Continue
    BuyOtherCoin --> WaitUntilCoinBought : Continue
    WaitUntilCoinBought --> [*] : Continue
}
TransferToOtherCoin -down-> Wait
Wait -up-> GetTrends : Continue

@enduml